    in partman).
  * Move graphic.utf to needed-characters.
  * Rename all needed-character files to *.utf to simplify Makefile.
  * Remove 2.6 references from hppa config as 2.6 is now default; keep
    EXTRANAME=2.6/ for now in order to not break debian-cd.

  [ Joey Hess ]
  * Remove build dep on libdebian-installer4 now that all udeb deps are fixed
  * Update i386 to 2.6.16.
  * Remove build dep on libdebconfclient0 since all relevant udeb deps are
    fixed.

  [ Frans Pop ]
  * Update sparc to 2.6.16; re-enable 2.6 for sparc32.

  [ Joey Hess ]
  * Can't find any uses of cdrom-minimal and netboot-minimal, so removing
    those directories from pkg-lists.

  [ Colin Watson ]
  * Update powerpc to 2.6.16.

 -- Joey Hess <joeyh@debian.org>  Mon, 27 Mar 2006 16:51:09 -0500

debian-installer (20060304) unstable; urgency=low

  * Add build dependency on debian-archive-keyring so that the archive key can
    be checked. Closes: #355098.

 -- Frans Pop <fjp@debian.org>  Sat,  4 Mar 2006 01:56:43 +0100

debian-installer (20060302) unstable; urgency=low

  * Remove floppy-modules udeb again from powerpc root floppy as it seems this
    is not the cause of the problems in #345467.

 -- Frans Pop <fjp@debian.org>  Thu,  2 Mar 2006 12:59:32 +0100

debian-installer (20060218) unstable; urgency=low

  [ Steve Langasek ]
  * Add alpha to the list of archs build-depending on module-init-tools,
    now that we're building 2.6.

 -- Frans Pop <fjp@debian.org>  Fri, 17 Feb 2006 23:58:05 +0100

debian-installer (20060217) unstable; urgency=low

  * Add myself to uploaders.
  * Acknowledge bugs closed in previous version which was uploaded as NMU by
    mistake. Closes: #343674, #344854.
  * Add missing build dependency on apt-utils (needed for localudebs handling).

 -- Frans Pop <fjp@debian.org>  Fri, 17 Feb 2006 02:52:43 +0100

debian-installer (20060215) unstable; urgency=low

  [ dann frazier ]
  * Stop using mklibs-copy on ia64, now that #326103 is fixed.

  [ Joey Hess ]