@@ -10,11 +10,5 @@ libslang2-udeb -
 # and newt
 libnewt0.51 -
 
-# These are all candidates for using udebs.
-# Alternitively, they could probably be reduced, if -pic libraries
-# were made.
+# This should really be a udeb.
 libtextwrap1 -
-
-# These should just use udebs.
-libdiscover1 -
-libdebconfclient0 -
