@@ -6,7 +6,7 @@ Uploaders: Joey Hess <joeyh@debian.org>, Alastair McKinstry <mckinstry@computer.
 Standards-Version: 3.6.2
 Build-Conflicts: libnewt-pic [mipsel]
 # NOTE: Do not edit the next line by hand. See comment below.
-Build-Depends: debhelper (>= 4), apt, apt-utils, gnupg, debian-archive-keyring, dpkg (>= 1.13.9), grep-dctrl, bc, debiandoc-sgml, glibc-pic, libparted1.6-13, libslang2-pic, libnewt-pic [!mipsel], libnewt-dev [mipsel], libdiscover1-pic [!s390 !s390x], libdiscover1 [!s390 !s390x], libbogl-dev, libtextwrap1, cramfsprogs [powerpc ia64 mips mipsel arm armeb], genext2fs (>= 1.3-7.1), e2fsprogs, mklibs (>= 0.1.15), mkisofs, genromfs [sparc], hfsutils [powerpc], dosfstools [i386 ia64 m68k amd64], cpio, devio [arm armeb], syslinux (>= 2.11-0.1) [i386 amd64], palo [hppa], elilo [ia64], yaboot [powerpc], aboot (>= 0.9b-2) [alpha], silo [sparc], sparc-utils [sparc], genisovh [mips], delo [mipsel], tip22 [mips], colo (>= 1.21-1) [mipsel], sibyl [mips mipsel], atari-bootstrap [m68k], vmelilo [m68k], m68k-vme-tftplilo [m68k], amiboot [m68k], tofrodos [i386 amd64], mtools (>= 3.9.9-1) [i386 ia64 m68k amd64], modutils, module-init-tools [i386 powerpc amd64 alpha hppa ia64 sparc], bf-utf-source [!s390 !s390x], upx-ucl-beta (>= 1:1.91+0.20030910cvs-2) [i386], mkvmlinuz [powerpc]
+Build-Depends: debhelper (>= 4), apt, apt-utils, gnupg, debian-archive-keyring, dpkg (>= 1.13.9), grep-dctrl, bc, debiandoc-sgml, libbogl-dev, glibc-pic, libparted1.6-13, libslang2-pic, libnewt-pic [!mipsel], libnewt-dev [mipsel], libtextwrap1, cramfsprogs [powerpc ia64 mips mipsel arm armeb], genext2fs (>= 1.3-7.1), e2fsprogs, mklibs (>= 0.1.15), mkisofs, genromfs [sparc], hfsutils [powerpc], dosfstools [i386 ia64 m68k amd64], cpio, devio [arm armeb], syslinux (>= 2.11-0.1) [i386 amd64], palo [hppa], elilo [ia64], yaboot [powerpc], aboot (>= 0.9b-2) [alpha], silo [sparc], sparc-utils [sparc], genisovh [mips], delo [mipsel], tip22 [mips], colo (>= 1.21-1) [mipsel], sibyl [mips mipsel], atari-bootstrap [m68k], vmelilo [m68k], m68k-vme-tftplilo [m68k], amiboot [m68k], tofrodos [i386 amd64], mtools (>= 3.9.9-1) [i386 ia64 m68k amd64], modutils [arm i386 mips mipsel powerpc s390 sparc], module-init-tools [i386 powerpc amd64 alpha hppa ia64 sparc mips mipsel arm armeb], bf-utf-source [!s390 !s390x], upx-ucl-beta (>= 1:1.91+0.20030910cvs-2) [i386], mkvmlinuz [powerpc]
 # This package has the worst Build-Depends in Debian, so it deserves some
 # explanation. Note that this comment can also be used to generate a
 # Build-Depends line, by running the debian/genbuilddeps program.
@@ -34,6 +34,8 @@ Build-Depends: debhelper (>= 4), apt, apt-utils, gnupg, debian-archive-keyring, 
 #		Used for some image size calculations.
 #	- debiandoc-sgml
 #		partman's manual is in debiandoc.
+#	- libbogl-dev
+#		For bdftobogl used in font reduction.
 #	
 # Library build dependencies:
 #	Libraries can come from three sources: From a udeb, from the build
@@ -51,16 +53,6 @@ Build-Depends: debhelper (>= 4), apt, apt-utils, gnupg, debian-archive-keyring, 
 #	- libnewt-dev [mipsel]
 #		On mipsel, we can't use libnewt-pic right now due to bug
 #		#329733. See also Build-Conflicts above.
-#	- libdiscover1-pic [!s390 !s390x]
-#	- libdiscover1 [!s390 !s390x]
-#		Currently we use library reduction to get the discover1
-#		library. There is no space gain however, and it should just
-#		use a udeb instead.
-#	- libbogl-dev
-#		bogl is used by bterm. There is no particular reason
-#		why we're copying the library from the build system instead
-#		of using a dependency.
-#		Also used to build a Unicode font for bterm.
 #	- libtextwrap1
 #		Used by cdebconf. Should be a udeb, but isn't.
 #
@@ -141,10 +133,10 @@ Build-Depends: debhelper (>= 4), apt, apt-utils, gnupg, debian-archive-keyring, 
 #		mcopy is used to put files onto FAT filesystems w/o
 #		mounting them.
 #
-#	- modutils
+#	- modutils [arm i386 mips mipsel powerpc s390 sparc]
 #		depmod is used to generate a modules.dep for images at
 #		build time. For 2.4 kernels.
-#	- module-init-tools [i386 powerpc amd64 alpha hppa ia64 sparc]
+#	- module-init-tools [i386 powerpc amd64 alpha hppa ia64 sparc mips mipsel arm armeb]
 #		depmod for 2.6 kernels on the arches that support 2.6.
 #
 #	- bf-utf-source [!s390 !s390x]
