@@ -46,8 +46,20 @@ debian-installer (20060307) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Remove build dep on libdebian-installer4 now that all udeb deps are fixed
   * Update i386 to 2.6.16.
+  * Copy library .so links from library-providing udebs into the udeblib
+    directory along with the library files, otherwise mklibs doesn't see them.
+    (Crossing fingers that this change, which has been tried once before,
+    doesn't break something..)
   * Remove build dep on libdebconfclient0 since all relevant udeb deps are
     fixed.
+  * Remove libdebconfclient0 from pkg-list/exclude too.
+  * Remove build dep on libdiscover1 now that there's a libdiscover1-udeb
+    and proper deps. Remove it from pkg-list/exclude too.
+  * Correct comment for libbogl-dev build dep.
+  * Add mips mipsel arm and armeb to arch list for the module-init-tools build
+    dep since they all use 2.6 kernels now.
+  * Limit modutils build dep to the arches that still use 2.4 [arm i386 mips
+    mipsel powerpc s390 sparc]
 
   [ Frans Pop ]
   * Update sparc to 2.6.16; re-enable 2.6 for sparc32.
